# hagl_pico_vgaboard

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hagl_hal.c  hagl_hal.h  hagl_pico_vgaboard.code-workspace  pico-vga-framebuffer.c  pico-vga-framebuffer.h
example/: BIOS_F08.h  CMakeLists.txt  IMAGES.md  LICENSE  README.md  aliens-4bpp.c  bars.c  borders-and-axis.c  buttons.c  cat-160x120.h  cat.h  dblbuf.c  example-16bits.c  example-16bpp.c  example-1bpp.c  example-2bpp.c  example-4bpp.c  example-8bits.c  example-8bpp.c  example-common.c  example-full.c  example-minimal.c  example-scroller.c  example-sprites.c  example.c  figures.c  font.c  font.h  fonts.c  hagl_font_test.c  images-4bpp.c  images-8bpp.c  images.c  luminance.c  minimal.c  palette.c  rect.c  rects.c  scratch.c  scroller.c  (+8 more)
example/images/: README.md  cat-160x120.h  cat-320x240.h  cat-8bpp-256x192.h  convert.py  cow-160x120.h  cow-8bpp-256x192.h  dog-160x120.h  dog-8bpp-256x192.h  toto.h
example/vgafont8/: FANT_F08.h  README.md  THIN_F08.h  pc_ibm_bios_f08.h  unscii_f08.h  unscii_fantasy_f08.h  unscii_mcr_f08.h  unscii_thin_f08.h  vgafont8.c  vgafont8_demo_4bpp.c
hagl_ext/include/: hagl_ext_blit.h  hagl_ext_char.h
hagl_ext/src/: hagl_ext_blit.c  hagl_ext_char.c
hagl_hal/include/: hagl_ext.h  hagl_ext_blit.h  hagl_ext_char.h  hagl_hal.h  hagl_hal_color.h
hagl_hal/src/: hagl_ext.c  hagl_ext_blit.c  hagl_ext_char.c  hagl_hal.c
include/: hagl_hal.h  hagl_hal_color.h  pico-vga-framebuffer.h  pico-vgaboard-colors.h  pico-vgaboard-framebuffer.h  pico-vgaboard-modes-1024x768.h  pico-vgaboard-modes-1280x1024.h  pico-vgaboard-modes-1280x720.h  pico-vgaboard-modes-1280x800.h  pico-vgaboard-modes-640x400.h  pico-vgaboard-modes-640x480.h  pico-vgaboard-modes-720x408-tic80.h  pico-vgaboard-modes-768x576.h  pico-vgaboard-modes-800x600.h  pico-vgaboard-modes.h  pico-vgaboard-palette-sweetie16.h  pico-vgaboard-palettes-bubblegum16.h  pico-vgaboard-palettes-c64.h  pico-vgaboard-palettes-cga.h  pico-vgaboard-palettes-cpc.h  pico-vgaboard-palettes-dawnbringer16.h  pico-vgaboard-palettes-db16.h  pico-vgaboard-palettes-grey.h  pico-vgaboard-palettes-sweetie16.h  pico-vgaboard-palettes.h  pico-vgaboard.h
include/experimental/: pico-vgaboard-modes-1024x576.h  pico-vgaboard-modes-1280x1024.h  pico-vgaboard-modes-1280x720.h  pico-vgaboard-modes-1280x800.h  pico-vgaboard-modes-720x408-tic80.h  pico-vgaboard-modes-tic80.h
pico_vgaboard/include/: buttons.h  colors.h  pico-vgaboard-buttons.h  pico-vgaboard-colors.h  pico-vgaboard-console.h  pico-vgaboard-framebuffer.h  pico-vgaboard-modes-1024x768.h  pico-vgaboard-modes-1280x1024.h  pico-vgaboard-modes-640x400.h  pico-vgaboard-modes-640x480.h  pico-vgaboard-modes-640x512.h  pico-vgaboard-modes-768x576.h  pico-vgaboard-modes-800x600.h  pico-vgaboard-palettes-atari-ste.h  pico-vgaboard-palettes-atarist.h  pico-vgaboard-palettes-bubblegum16.h  pico-vgaboard-palettes-c64.h  pico-vgaboard-palettes-cga.h  pico-vgaboard-palettes-console16.h  pico-vgaboard-palettes-cpc.h  pico-vgaboard-palettes-dawnbringer16.h  pico-vgaboard-palettes-grey.h  pico-vgaboard-palettes-sweetie16.h  pico-vgaboard-palettes.h  pico-vgaboard-terminal.h  pico-vgaboard-text-screen.h  pico-vgaboard-text.h  pico-vgaboard.h  tiles.h
pico_vgaboard/include/experimental/: pico-vgaboard-modes-1024x576.h  pico-vgaboard-modes-1280x800.h  pico-vgaboard-modes-1680x1050.h  pico-vgaboard-modes-640x512.h
pico_vgaboard/include/fonts/: .gitignore  UNSCII2H.sh  bios-f08.h  f08to256x8.py  unscii-16-437-8x16.h  unscii-16-850-8x16.h  unscii-437-8x8.h  unscii-850-8x8.h  unscii-alt-437-8x8.h  unscii-alt-850-8x8.h  unscii-fantasy-437-8x8.h  unscii-fantasy-850-8x8.h  unscii-mcr-437-8x8.h  unscii-mcr-850-8x8.h  unscii-tall-437-8x16.h  unscii-tall-850-8x16.h  unscii-thin-437-8x8.h  unscii-thin-850-8x8.h
pico_vgaboard/include/modes/: 1024x768.h  1280x1024.h  1280x720.h  1680x1050.h  640x400.h  640x480.h  768x576.h  800x600.h  pico-vgaboard-modes-1024x768.h  pico-vgaboard-modes-1280x1024.h  pico-vgaboard-modes-1280x720.h  pico-vgaboard-modes-1680x1050.h  pico-vgaboard-modes-640x400.h  pico-vgaboard-modes-640x480.h  pico-vgaboard-modes-800x600.h
pico_vgaboard/include/modes/experimental/: 1024x576.h  1280x800.h  1600x900.h  640x512.h  840x525.h  pico-vgaboard-modes-1024x576.h  pico-vgaboard-modes-1680x1050.h  pico-vgaboard-modes-640x512.h  pico-vgaboard-modes-840x525.h  pico-vgaboard-modes-tic80.h  tic80.h
pico_vgaboard/include/palettes/: atari-ste.h  bubblegum16.h  c64.h  cga.h  console16.h  cpc.h  cx16.h  dawnbringer16.h  fantasy16.h  grey.h  na16.h  night16.h  palettes.h  perfect16.h  pico-vgaboard-palettes-atari-ste.h  pico-vgaboard-palettes-bubblegum16.h  pico-vgaboard-palettes-c64.h  pico-vgaboard-palettes-cga.h  pico-vgaboard-palettes-console16.h  pico-vgaboard-palettes-cpc.h  pico-vgaboard-palettes-cx16.h  pico-vgaboard-palettes-dawnbringer16.h  pico-vgaboard-palettes-grey.h  pico-vgaboard-palettes-sweetie16.h  pico-vgaboard-palettes.h  pico8.h  rgb121.h  sweetie16.h
pico_vgaboard/src/: buttons.c  font-bios-f08.c  make-cx16.c  make-rgb-ansi-256.c  make-rgb332.c  make-rgb685.c  make-rgbi256.c  palettes.c  pico-vgaboard-buttons.c  pico-vgaboard-console.c  pico-vgaboard-framebuffer.c  pico-vgaboard-palettes.c  pico-vgaboard-text.c  pico-vgaboard.c  render-borders.c  render-framebuffer.c  tiles-test.c  tiles.c
pico_vgaboard_text/example/: example.c
pico_vgaboard_text/include/: pico-vgaboard-text-screen.h
pico_vgaboard_text/src/: pico-vgaboard-text-screen.c
pico_vgaboard_text_example/: CMakeLists.txt  example.c
pico_vgaboard_text_example/boards/: vgaboard-pico2.h
src/: hagl_hal.c  make-rgb332.c  make-rgb685.c  make-rgbi256.c  make_rgbi256.c  pico-vga-framebuffer.c  pico-vgaboard-framebuffer.c  pico-vgaboard-palettes.c  pico-vgaboard.c
